// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ssr > should emit global styles without any other components 1`] = `
"<style data-styled="true" data-styled-version="JEST_MOCK_VERSION">body{background:papayawhip;}/*!sc*/
data-styled.g1[id="sc-global-a1"]{content:"sc-global-a1,"}/*!sc*/
</style>"
`;

exports[`ssr > should emit global styles without any other components 2`] = `
[
  {
    "$$typeof": Symbol(react.transitional.element),
    "_owner": null,
    "_store": {},
    "key": "sc-0-0",
    "props": {
      "dangerouslySetInnerHTML": {
        "__html": "body{background:papayawhip;}/*!sc*/
data-styled.g1[id="sc-global-a1"]{content:"sc-global-a1,"}/*!sc*/
",
      },
      "data-styled": "",
      "data-styled-version": "JEST_MOCK_VERSION",
    },
    "type": "style",
  },
]
`;

exports[`ssr > should extract both global and local CSS 1`] = `"<h1 class="sc-b c">Hello SSR!</h1>"`;

exports[`ssr > should extract both global and local CSS 2`] = `
"<style data-styled="true" data-styled-version="JEST_MOCK_VERSION">body{background:papayawhip;}/*!sc*/
data-styled.g1[id="sc-global-a1"]{content:"sc-global-a1,"}/*!sc*/
.c{color:red;}/*!sc*/
data-styled.g2[id="sc-b"]{content:"c,"}/*!sc*/
</style>"
`;

exports[`ssr > should extract the CSS in a simple case 1`] = `"<h1 class="sc-a b">Hello SSR!</h1>"`;

exports[`ssr > should extract the CSS in a simple case 2`] = `
"<style data-styled="true" data-styled-version="JEST_MOCK_VERSION">.b{color:red;}/*!sc*/
data-styled.g1[id="sc-a"]{content:"b,"}/*!sc*/
</style>"
`;

exports[`ssr > should render CSS in the order the components were defined, not rendered 1`] = `"<div><h2 class="TWO a"></h2><h1 class="ONE b"></h1></div>"`;

exports[`ssr > should render CSS in the order the components were defined, not rendered 2`] = `
"<style data-styled="true" data-styled-version="JEST_MOCK_VERSION">.b{color:red;}/*!sc*/
data-styled.g1[id="ONE"]{content:"b,"}/*!sc*/
.a{color:blue;}/*!sc*/
data-styled.g2[id="TWO"]{content:"a,"}/*!sc*/
</style>"
`;

exports[`ssr > should return a generated React style element 1`] = `
{
  "dangerouslySetInnerHTML": {
    "__html": "body{background:papayawhip;}/*!sc*/
data-styled.g1[id="sc-global-a1"]{content:"sc-global-a1,"}/*!sc*/
.c{color:red;}/*!sc*/
data-styled.g2[id="sc-b"]{content:"c,"}/*!sc*/
",
  },
  "data-styled": "",
  "data-styled-version": "JEST_MOCK_VERSION",
}
`;
